# zebra

./: package.json
client/: api.js  package.json
client/components/: withAuth.js
client/components/common/: PageLayout.js
client/db-scripts/: create.sql  seed.sql
client/pages/: _document.js  event.js  index.js  login.js  newEvent.js  signup.js
client/server/: routes.js  server.js
client/static/: app.css
config/: config.js
pages/: __TEMPLATE.js  _app.js  event.js  index.js  newEvent.js
redux/: reduxApi.js
server/: README.md  pyproject.toml  routes.js  run.py
server/api/: events.js
server/migrations/versions/: f981a691019a_.py
server/src/: app.py  config.py
server/src/lib/: auth.py  response.py
server/src/models/: EventModel.py  UserModel.py  __init__.py
server/src/views/: UserView.py
