[tool.poetry]
name = "zebra_server"
version = "0.1.0"
description = "backend for Zebra"
authors = ["twoodrow <twoody2007@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.1"
flask = "^1.0"
jwt = "^0.6.1"
flask_bcrypt = "^0.7.1"
flask_sqlalchemy = "^2.4"
marshmallow = "^2.19"
flask_script = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
